2003-09-22  Jan Nieuwenhuizen  <janneke@gnu.org>

	* stepmake/aclocal.m4: 
	* make/stepmake.make:
	* make/toplevel-version.make: Revert/fix VERSION/PACKAGE stuff.

2003-09-22  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* scm/define-grob-properties.scm (gap-count): add gap-count

	* make/lilypond-vars.make: add /lilypond to LILYPONDPREFIX

2003-09-22  Jan Nieuwenhuizen  <janneke@gnu.org>

	* cygwin/mknetrel.doc: Typo.

	* buildscripts/make-font-dir.py (Font_info): Build fix: add 'ss'

	* make/lilypond-vars.make (PYTHONPATH): srcdir build fix.

2003-09-22  Mats Bengtsson  <mabe@drongo.s3.kth.se>

	* scripts/lilypond.py: add support for 'legal' and 'tabloid' paper
	sizes. Remove support for 'ledger'(=tabloid+landscape).

2003-09-22  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* mf/GNUmakefile ($(outdir)/%.pfa): break apart one-big-rule for
	sauter PFAs.

	* configure.in: remove VERSION stuff once again.

	* scm/font.scm (paper20-style-sheet-alist): add cmss entries.

	* scm/define-grobs.scm (all-grob-descriptions): use sans family
	for chord names.

	* mf/GNUmakefile: always trace pfa fonts.
	(SAUTER_FONTS): add cmss[567] too fonts

	* configure.in: require mftrace. 

	* lily/staff-performer.cc (new_instrument_string): don't look at
	instrument property.

	* lily/lily-guile.cc: renaming, ly_dir_p is the Scheme function,
	is_direction is the C++ one. Similar for ly_axis_p and
	ly_number_pair_p

2003-09-21  Jan Nieuwenhuizen  <janneke@gnu.org>

	* lily/beam.cc (brew_molecule): read gap-count to determine
	number of tremolo (gapped) beams.

	* lily/chord-tremolo-engraver.cc (acknowledge_grob): repeats
	shorter than 1/8

	* flower/include/array.hh (default_compare): new function

	* cygwin/mknetrel: Native fixes.

	* cygwin/GNUmakefile (EXTRA_DIST_FILES): Add mknetrel.*

2003-09-20  Jan Nieuwenhuizen  <janneke@gnu.org>

	* Documentation/topdocs/NEWS.texi: Add note about .ly double click
	feature for Windows.

	* stepmake/stepmake/generic-vars.make: Cygwin fix from stable.
