@@ -51,7 +51,6 @@ def read_afm_file (filename):
 
 class Font_info:
 	cm = {
-		'ss' : ('regular', 'sans'),
 		'bx': ('bold', 'roman'),
 		'bxti' : ('bold', 'italic'),
 		'csc' : ('smallcaps', 'roman'),
